# lib1-temp

./: CMakeLists.txt  flake.nix  lib_a.cpp  lib_a.h  lib_a2.cpp  lib_a2.h  lib_aConfig.cmake.in  result
install/include/: lib_a2.h
install/lib/cmake/lib_a/: lib_aConfig-noconfig.cmake
